plugins {
    id 'application'
    id("org.springframework.boot") version("3.4.3")
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'software.amazon.awssdk:rds:2.39.2'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'com.mysql:mysql-connector-j:8.3.0'

    implementation platform("org.springframework.boot:spring-boot-dependencies:3.4.3")
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-test"
    implementation 'org.springframework.security:spring-security-crypto:6.4.5'

    implementation platform('software.amazon.awssdk:bom:2.42.13')
    implementation 'software.amazon.awssdk:sesv2'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'spring.Application'
}

bootRun {
    jvmArgs = ["--enable-native-access=ALL-UNNAMED"]
}